<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".CapturaDatosActivity">


    <Button
        android:id="@+id/btNext"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCelular"
        android:layout_marginTop="20dp"
        android:text="@string/siguiente" />

    <EditText
        android:id="@+id/etNombre"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txNombre"
        android:layout_margin="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCedula"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txCedula"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDireccion"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txDireccion"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCiudad"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txCiudad"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPais"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txPais"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCelular"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txCelular"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txNombre"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/txCedula"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:text="@string/cedula" />

    <TextView
        android:id="@+id/txDireccion"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCedula"
        android:text="@string/direccion" />

    <TextView
        android:id="@+id/txCiudad"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDireccion"
        android:text="@string/ciudad" />

    <TextView
        android:id="@+id/txPais"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCiudad"
        android:text="@string/pais" />

    <TextView
        android:id="@+id/txCelular"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPais"
        android:text="@string/celular" />

</RelativeLayout>