<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".FotoActivity">

    <Button
        android:id="@+id/tomar_fotos"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/tomar_foto" />

    <Button
        android:id="@+id/seleccionar_fotos"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tomar_fotos"
        android:text="@string/seleccionar_foto" />

    <Button
        android:id="@+id/btNext"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnFoto"
        android:layout_marginTop="20dp"
        android:text="@string/siguiente" />


    <LinearLayout
        android:id="@+id/lnFoto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/seleccionar_fotos"
        android:background="@drawable/borde"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/im_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter" />


    </LinearLayout>

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/selecci_n_y_toma_de_foto"
        android:textSize="20sp" />

</RelativeLayout>