<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/icons"
    android:paddingBottom="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/observaciones"
        style="@style/TextAppearance.AppCompat"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            style="@style/TextAppearance.AppCompat.Button"
            android:text="@string/aceptar"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nuevo"
            style="@style/TextAppearance.AppCompat.Button"
            android:textSize="10sp" />
    </LinearLayout>


</LinearLayout>